refactor: refining dockerfile and adding annotation in .conf

--- a/keepitup.conf
+++ b/keepitup.conf
@@ -8,10 +8,10 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     location /api/ {
-        proxy_pass http://10.0.2.20:8080;
+        proxy_pass http://172.31.32.243:8080; # Backend EC2 private IP
     }
 
     location / {
-        proxy_pass http://10.0.1.10:3000;
+        proxy_pass http://172.31.40.253:3000; # Frontend EC2 private IP
     }
 }
