feat: applying https

--- a/keepitup.conf
+++ b/keepitup.conf
@@ -1,6 +1,15 @@
 server {
     listen 80;
+
     server_name keepit-up.site;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name keepit-up.site;
+    ssl_certificate     /etc/letsencrypt/live/keepit-up.site/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/keepit-up.site/privkey.pem;
 
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -8,10 +17,11 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     location /api/ {
-        proxy_pass http://172.31.32.243:8080; # Backend EC2 private IP
+        proxy_pass http://172.31.47.244:8090; # Backend EC2 private IP
     }
 
     location / {
-        proxy_pass http://172.31.40.253:3000; # Frontend EC2 private IP
+        # proxy_pass http://172.31.16.194:3000; # Frontend EC2 private IP
+        proxy_pass http://172.31.30.42:3000;
     }
 }
